fixed dropdown item overflowing in the tabelas page

--- a/public/css/tabelas.css
+++ b/public/css/tabelas.css
@@ -109,12 +109,14 @@ td:not(.table-team-name) {
 .tables-dropdown {
   position: relative;
   display: inline-block;
+  width: min(100%, 350px);
 }
 
 .tables-dropdown-title {
   background-color: var(--clr-primary-400);
   color: var(--clr-light-100);
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+  width: 100%;
   text-align: center;
   border-radius: 8px;
   padding: 12px 16px;
